[package]
name = "elliptic_curve_cryptography_tools"
version = "0.1.0"
edition = "2021"
description = "An implementation of elliptic curve cryptography with ECDSA"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = { version="0.4.4", features=["rand"] }
sha256 = "1.1.4"
hex = "0.4.3"